# ChangeLog for app-admin/testdisk
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/testdisk/ChangeLog,v 1.9 2005/03/02 08:30:16 dragonheart Exp $

*testdisk-5.6 (02 Mar 2005)

  02 Mar 2005; Daniel Black <dragonheart@gentoo.org> testdisk-5.5.ebuild,
  +testdisk-5.6.ebuild:
  Added reiserfsprogs dependancy as per bug #82913. Version bump to 5.6 
  (email by author Christophe GRENIER <grenier@cgsecurity.org>. Bug 
  #82913 by Chris Slycord <slycorc@cc.wwu.edu>

*testdisk-5.5 (26 Jan 2005)

  26 Jan 2005; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  +testdisk-5.5.ebuild:
  version bump. Added forensic herd to maintainers

  19 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  add metadata.xml

  17 Jul 2004; David Holm <dholm@gentoo.org> testdisk-5.3.ebuild:
  Added to ~ppc.

  17 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> testdisk-5.2.ebuild:
  stable old version.

*testdisk-5.3 (17 Jul 2004)

  17 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> testdisk-5.3.ebuild:
  bug #55347, version bump.

*testdisk-5.2 (24 Apr 2004)

  24 Apr 2004; Robin H. Johnson <robbat2@gentoo.org> testdisk-5.2.ebuild:
  Initial ebuild submitted by Sebastian B. Otaegui <sotaegui@itba.edu.ar>, bug
  #47278.
